syntax = "proto3";
message message__t
 {
        enum Opcode {
                OP_BAD     = 0;
                OP_SIZE    = 10;
                OP_DEL     = 20;
                OP_GET     = 30;
                OP_PUT     = 40;
                OP_GETKEYS = 50;
                OP_PRINT   = 60;
                OP_STATS   = 70;
                OP_ERROR   = 99;
        }
        Opcode opcode = 1;

        enum C_type {
                CT_BAD    = 0;
                CT_KEY    = 10;
                CT_VALUE  = 20;
                CT_ENTRY  = 30;
                CT_KEYS   = 40;
                CT_RESULT = 50;
                CT_TABLE  = 60;
                CT_NONE   = 70;
        }
        C_type c_type = 2;
        sint32 size = 3;
        bytes data = 4;
	string key = 5;
	repeated string info = 6;
        sint32 n_times_SIZE = 7;         
        sint32 n_times_DEL = 8;          
        sint32 n_times_GET = 9;          
        sint32 n_times_PUT = 10;          
        sint32 n_times_GETKEYS = 11;    
        sint32 n_times_PRINT = 12;        
        double avg_time = 13;

};
